2nd attempt to fix spacing around photo

--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,7 @@ a:active {
   margin: 20px;
   margin-top: 0;
   margin-left: 0;
+  margin-bottom: 15px;
   float: left;
 }
 
